apps/tfe/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tfe
  namespace: tfe
spec:
  hostnames:
  - tfe.mcswain.dev
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: public
    namespace: envoy-gateway-system
    sectionName: https
  rules:
  - backendRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: tfe-backend
      namespace: tfe
      port: 443
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
    timeouts:
      backendRequest: 2h
      request: 3h
