apps/tfe/networkpolicy-agents.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tfe
  namespace: tfe-agents
spec:
  endpointSelector:
    matchLabels:
      app: terraform-enterprise
  egress:
    # Allow egress to kube-dns
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
    # Allow egress to TFE
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: tfe
            app: terraform-enterprise
      toPorts:
        - ports:
            - port: "443"
    # Allow egress to my WAN IP
    - toCIDR:
        - 68.97.73.184/32
      toPorts:
        - ports:
            - port: "443"
  ingress:
    # Allow ingress (responses) from kube-dns
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
    # Allow TFE to hit agents
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: tfe
    - fromEndpoints:
        - {}
