apps/tfe/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tfe
  namespace: tfe
spec:
  endpointSelector:
    matchLabels:
      app: terraform-enterprise
  egress:
    # Egress to Minio
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: minio
            app.kubernetes.io/instance: minio
    # Egress (responses) to nginx
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: nginx
            app.kubernetes.io/instance: nginx
    # Allow egress to pods in the same namespace, namely Redis and Postgres
    - toEndpoints:
        - {}
    # Allow egress to kube-dns
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
    # GitHub AS36459
    # - toCIDRSet:
    #     - cidr: 140.82.112.0/20
    #     - cidr: 143.55.64.0/20
    #     - cidr: 192.30.252.0/22
    #     - cidr: 192.30.252.0/22
    # Allow egress to my WAN IP
    - toCIDR:
        - 68.97.73.184/32
      toPorts:
        - ports:
            - port: "443"
    # Allow kube-apiserver (for agent jobs)
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
            - port: "6443"
  ingress:
    # Allow ingress from nginx ingress controller
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: nginx
            app.kubernetes.io/instance: nginx
    # Allow ingress (responses) from kube-dns
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
    # Allow agents to hit TFE
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: tfe-agents
    # Allow ingress (responses) from kube-apiserver
    - fromEntities:
        - kube-apiserver
    - fromEndpoints:
        - {}
